# mlcamp-homework

./: README.md  first try.ipynb  pyproject.toml
01-intro/: introhm.ipynb
01-intro/.ipynb_checkpoints/: introhm-checkpoint.ipynb
02-regression/: regressionhw.ipynb
03-classification/: classificationhw.ipynb
04-evaluation/: evaluationhw.ipynb
05-deployment/: 5hw.ipynb  app.py
06-trees/: treeshw.ipynb
