[project]
name = "mlcamp-homework"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "uvicorn[standart]>=0.38.0",
    "xgboost>=3.1.1",
]
